--- a/app/presenters/templates/Homepage/accommodation.latte
+++ b/app/presenters/templates/Homepage/accommodation.latte
@@ -25,7 +25,7 @@
 <div class="page_content">
     <div class="full_width_centered">
         <div class="left1">
-            <h2>Možnosti kde si zajistit ubytování.</h2>
+            <h2>Naše tipy na ubytování</h2>
             <p>
             <ul>
                 <li><a target="_blank" href="http://hotelvedvore.cz/index.html">Hotel ve dvoře, Spálené Poříčí.</a></li>
@@ -34,8 +34,8 @@
             </ul>
 
             </p>
-            Všechny varianty jsou ve Spáleném Poříčí. Je to 5 kilometrů od místa svatby. Bude zde jezdit rozvoz. <br>
-            Samozřejmě je možno si zajistit ubytování kdekoliv jinde, ale prosíme s rozumem co se vzdálenosti týče, kvůli odvozu.
+            Všechny varianty jsou ve Spáleném Poříčí, které je 5 kilometrů od místa svatby. <br>
+            Samozřejmě je možno si zajistit ubytování kdekoliv jinde, ale prosíme s rozumem, co se vzdálenosti týče- kvůli odvozu.
             <p>
 
 
