--- a/app/presenters/templates/Homepage/contact.latte
+++ b/app/presenters/templates/Homepage/contact.latte
@@ -109,24 +109,24 @@
 
         <div class="left14_first">
             <h5>Pavel Batko</h5>
-            <h5>602 521 012</h5>
-            <p>Volat kdykolv ve dne v noci jen ne v den obřadu :-). Díky</p>
+            <h5>+420 602 521 012</h5>
+            <p>Můžete volat ve dne v noci, jen ne v den obřadu.</p>
         </div>
         <div class="left14">
             <h5>Šárka Zemanová</h5>
-
+            <h5>+420 724 516 744</h5>
             <p>Raději nevolat, je to přeci jenom nevěsta.</p>
         </div>
         <div class="left14">
 
             <h5>Karel Kokaisl</h5>
             <h5>+47 980 78 165</h5>
-            <p>Norské číslo, ale je to čech jak poleno. A všechno zařídí. Pravá ruka ženicha.</p>
+            <p>Norské číslo, ale je to čech jak poleno. Pravá ruka ženicha.</p>
         </div>
         <div class="left14_last">
             <h5>Petra Zemanová</h5>
-            <h5>724 512 140</h5>
-            <p>Pravá ruka a mluvčí nevěsty.</p>
+            <h5>+420 724 512 140</h5>
+            <p>Pravá ruka nevěsty.</p>
         </div>
 
 
