--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -70,11 +70,7 @@
                 <div style="background-image: url(./images/slider/slide3.jpg);"></div>                   
             </div>
         </div>
-<div class="countdown_container" style="background-color: red">
-    <p style="color: white; text-align: center">Zatím dáváme vše do kupy a informace budeme aktualizovat. Sledujte nás.</p>
-            
-         {*   <div class="rsvp_button"><span class="swirl_left_small"><span class="swirl_right_small"><a href="#">RSVP</a></span></span></div> *}
-        </div>
+
         <div class="countdown_container">
             <h2 class="centered_title">Už zbývá jen</h2>
             <div id="defaultCountdown"></div>
@@ -99,7 +95,7 @@
                         <div class="about_pic"><img src="images/nevesta.jpg" alt="" title="" /></div>
                     </div>
                   
-                    <p>Šárka a její první videohra.</p>
+                  
                    
 
                 </div>
@@ -115,9 +111,7 @@
                         </div>
                         <div class="about_pic"><img src="{$basePath}/images/husopaska.jpg" alt="" title="" /></div>
                     </div>
-                    
-                    <p>Jmenuji se Pavel po otci a husy mám rád od dětství.</p>
-                    <span class="love_quote">Gumovky, to je moje.</span>
+            
                 </div>
 
                 <div class="clear"></div>
@@ -155,20 +149,20 @@
                     <div class="bottom_icon"><img src="images/icon_music.png" alt="" title="" /></div>
                     <h2>PÁRTY</h2>
                     <span class="subtitle">DOBRÁ NÁLADA NUTNÁ</span>
-                    <p>Starosti necháme doma. Vemte si dobrou náladu. Osvěžte si taneční krok a jdeme na to...</p>
+                    <p>Připravte si dobrou náladu, osvěžte si taneční krok a jdeme na to...</p>
                     
                 </div>
                 <div class="left13">
                     <div class="bottom_icon"><img src="images/icon_location.png" alt="" title="" /></div>
                     <h2>MÍSTO SVATBY</h2>
                     <span class="subtitle">FARMA MOULISOVÝCH - MILÍNOV 23</span>
-                    <p><a href="http://www.farmamoulisovych.cz/">Místo</a> bude označeno cedulí a nedá se nenajít. Pokud byl i přesto problém - <a n:href="contact">volejte naše operátory</a> </p>
+                    <p><a href="http://www.farmamoulisovych.cz/">Místo</a> bude označeno cedulí. Pokud by byl i přesto problém - <a n:href="contact">volejte naše operátory</a> </p>
                   
                 </div>
                 <div class="left13_last">
                     <div class="bottom_icon"><img src="images/icon_gifts.png" alt="" title="" /></div>
                     <h2>SVATEBNÍ DARY</h2>
-                    <span class="subtitle">TYP</span>
+                    <span class="subtitle">TIP</span>
                     <p>Jelikož si někdo se svatebním darem hlavu láme, pak vězte, že už doma skoro všechno máme. Proto nás potěší váš příspěvek v jakékoliv výši, co rozpočet na líbánky a další život zvýší.</p>
                 
                 </div>
