--- a/app/presenters/templates/Homepage/faq.latte
+++ b/app/presenters/templates/Homepage/faq.latte
@@ -17,7 +17,7 @@
     <div class="page_header_trans">
         <div class="page_header_title">
             <h1>FAQ</h1>
-            <p>Pokud něco nevíte, tak tady najdete odpověď. Budem postupně doplňovat.</p>
+            <p>Informace průběžně doplňujeme.</p>
         </div>
     </div>
 </div>
@@ -27,7 +27,8 @@
         <div class="left_full">
             <h6>Dostal jsem pozvánku na Vaši svatbu. Co mám dělat?</h6>
             <p>
-                Potvrdit na <a href="mailto:svatba@batkovi.com">svatba@batkovi.com</a> a přijít :-). Prosíme o potvrzení z důvodu objednání dostatečného občerstvení a židlí. Díky
+Prosíme potvrďte svou účast do 5.8.2015 na  <a href="mailto:svatba@batkovi.com">svatba@batkovi.com</a>. Do emailu uveďte počet osob a jmenný seznam, abychom pro vás mohli připravit místo u stolu 
+a něco dobrého k snědku.
             </p>
         </div>
       {*  <div class="left_full">
@@ -37,60 +38,70 @@
         *}
         <div class="left_full">
             <h6>Copak bych jim asi tak koupil za dar.</h6>
-            <p>Dlouho jsme hledali, až jsme našli takovou krásnou básničku: Jelikož si někdo se svatebním darem hlavu láme, pak vězte, že už doma skoro všechno máme. Proto nás potěší váš příspěvěk v jakékoliv výši, co rozpočet na líbánky a další život zvýší.</p>
+            <p>Jelikož si někdo se svatebním darem hlavu láme, pak vězte, že už doma skoro všechno máme. Proto nás potěší váš příspěvěk v jakékoliv výši, co rozpočet na líbánky a další život zvýší.</p>
         </div>  
         <div class="left_full">
-            <h6>Stojím před skříní a nevím co si vzít na sebe. Nevadí, beru šortky.</h6>
-            <p>No tak na to teda zapomeň! Přeci nechceš, aby si na tebe každý ukazoval. Ano zažili jsme různá pekla na různých svatbách v podobě křiklavě oranžových triček, ponožek v sandálech 
-                a motorkářškých kombinéz. Pomožte nám, ať se historie neopakuje. Díky</p>
+            <h6>Stojím před skříní a nevím, co si vzít na sebe. Nevadí, beru šortky.</h6>
+            <p>No tak na to teda zapomeň! Přeci nechceš, aby si na tebe každý ukazoval. Ano, zažili jsme různá pekla na různých svatbách. A to v podobě křiklavě oranžových triček, ponožek v sandálech 
+                a motorkářských kombinéz. Pomozte nám, ať se historie neopakuje. Díky</p>
                 </div> 
+        
+                <div class="left_full">
+            <h6>Jaká je barva svatby?</h6>
+            <p>Víme, že v dnešní době je moderní celou svatbu ladit do jedné barvy a asi právě proto ze všech stran slýcháme tuto otázku. My však věříme, že na barvě nezáleží. Vemte si na sebe šaty nebo košili své oblíbené barvy, cokoliv pěkného, v čem se cítíte dobře a co vám sluší.
+             Jediné, co je třeba mít na paměti - černá patří na pohřeb a bílá je barvou nevěsty.</p>
+                </div> 
+        
+        
     <div class="left_full">
-            <h6>Pohoda. Vhodné oblečení jsme přeci jen našel. No ale jak se mám dostat do takových končin?</h6>
-            <p>Zase tak daleko to není. Celá akce se koná <a target="_blank" href="http://mapy.cz/s/j38P">ZDE</a>. Vše bude dostatečně značeno. Automobil zaparkujete na místním parkovišti.</p>
+            <h6>Pohoda. Vhodné oblečení jsem přeci jen našel. No ale jak se mám dostat do takových končin?</h6>
+            <p>Zase tak daleko to není a vše bude dostatečně značeno. Celá akce se koná <a target="_blank" href="http://mapy.cz/s/j38P">ZDE</a>. </p>
             <div id="map">
                   {include map}
             </div>
           
         </div> 
                <div class="left_full">
-            <h6>Chci se dostat na svatbu, ale nemám jak nebo chci pít a vím že pak nebudu moci řídit.</h6>
-            <p>Zavolej co nejdříve ženichovi a domluv se s ním. S tímto se počítá a on Ti někoho domluví.</p>
+            <h6>Chci se dostat na svatbu, ale nemám jak nebo chci pít a vím, že pak nebudu moci řídit.</h6>
+            <p>V případě, že potřebujete pomoci s dopravou na svatbu z Plzně či okolí, dejte prosím vědět s dostatečným předstihem, odvoz Vám zajistíme.</p>
                
           
         </div> 
           <div class="left_full">
             <h6>Je 5.9.2015, 14:30 a jsem tady.</h6>
-            <p>Paráda. Přišel si včas a máš bod. Dej si v klidu uvítací drink. Přivítej se se přáteli. I něco k snědku se tu najde. Následující program je <a n:href="program">tady</a>. Za hodinu to vypukne.</p>
+            <p>Paráda. Přišel si včas! Dej si drink a přivítej se s přáteli. Následující program je <a n:href="program">tady</a>. Za hodinu to vypukne.</p>
         </div>  
         <div class="left14_first">
             <h6>Kdo fotí?</h6>
-            <p>Fotograf <a href="http://bilacerna.cz/cs">Ondra Vala</a>. Zažil jsem ho na dvou svatbách a viděl z nich vždy parádní fotky :-)</p>
+            <p>Fotograf <a href="http://bilacerna.cz/cs">Ondra Vala</a>. </p>
         </div> 
         <div class="left14">
             <h6>Kdo hraje?</h6>
-            <p><a href="http://www.djsagency.cz/">DJ</a>. Pokud budete chtít něco zahrát na přání, není to problém. Tímto bych poprosil Máru a Krikriho a jejich kytary - kdyby něco :-). DJ hraje do 03:00 a pak dle nálady...</p> 
+            <p><a href="http://www.djsagency.cz/">DJ</a>. Pokud budete chtít něco zahrát na přání, není to problém. Tímto bych poprosil Máru a Krikriho a jejich kytary - kdyby něco :-). DJ hraje do 03:00</p> 
         </div>    
         <div class="left14">
             <h6>Kdo vaří a co vaří?</h6>
-            <p>Probíhá výběr</p>
-            <p>Bude raut po celou dobu akce.</p>
+            
+            <p>Vzhledem k velkému počtu svatebčanů jsme se rozhodli pro občerstvení formou rautu. Dejte si prosím kdykoliv to, na co máte chuť.</p>
+            <p>Kromě rautu pro vás bude připravený grilovaný divočák.</p>
         </div> 
         <div class="left14_last">
             <h6>Kdo točí a co teče?</h6>
-            <p>Probíhá výběr</p>
-            <p>České pivo. Moravské víno a destiláty. Nealko a další nápoje.</p>
+            
+            <p>České pivo, moravské víno, destiláty a samozřejmě i nealko a další nápoje.</p>
         </div> 
         <div class="clear"></div>
-        <div class="left1">
-            <h6>Už jsem si pořádně zatančil, napil a najedl. S novomanželi se pobavil a vytočil všechny případné dámy či pány. Je čas jít na kutě.</h6>
-            <p>Stačí vyhledat rozvoz a domluvit se s ním.</p>
-            <p>Co se týče ubytování tak info je <a href="accommodation">zde</a>.</p>
-        </div> 
-        {*<div class="left_full">
-            <h6>Už jsem na odchodu a ještě nemám výslužku.</h6>
-            <p>Tak to ses asi nerozloučil, jinak bys jí dostal :-)</p>
-        </div>  
-          *}
+        
+           <div class="left_full">
+            <h6>Rád bych se na svatbě napil a jsem z daleka je možné se někde v okolí ubytovat?</h6>
+            <p>Na farmě jsou omezené ubytovací kapacity, které jsme si dovolili rezervovat pro nejbližší členy rodiny. Ideální je tady vybrat z možností ubytování v nedalekém Spáleném Poříčí. Připravili jsme pro vás několik tipů, které naleznete v <a n:href="accommodation">sekci ubytování</a>.</p>
+                </div> 
+        
+        
+            <div class="left_full">
+            <h6>Je svatba baby-friendly?</h6>
+            <p>Vzhledem k tomu, že většina našich přátel s rodičovskými povinnostmi si již teď zajistila hlídání svých ratolestí, očekáváme minimální, ne-li nulovou účast dětí. Z tohoto důvodu nepřipravujeme žádný program pro naše malé kamarády. Jestliže sebou své děti chcete vzít, samozřejmě to není problém. Jen vás prosíme, abyste je v průběhu obřadu zabavili, aby naše ANO nebylo přehlušeno. </p>
+                </div> 
         
        
         <div class="clear"></div>
