--- a/app/presenters/templates/Homepage/program.latte
+++ b/app/presenters/templates/Homepage/program.latte
@@ -17,8 +17,7 @@ main_menu.init("main_menu","menuhover");
       <div class="page_header_trans">
                <div class="page_header_title">
                <h1>PROGRAM</h1>
-<p>Zde naleznete plánovaný program. <br />
-Pokud vám něco není jaské, neváhete se zeptat.</p>
+<p>Předpokládaný průběh svatebního dne <br />
                </div>
        </div>
    </div>
@@ -28,29 +27,39 @@ Pokud vám něco není jaské, neváhete se zeptat.</p>
         <div class="left1">
         <h2>14:30 - Ideální čas Vašeho příjezdu</h2>
 <p>
-    Nebudeme si nic nalhávat, každý se občas opozdí. Zkuste tak neučinit a dorazit včas. Rozhodně se nebudete nudit, bude pro vás
- připraven uvítací drink a malé pohoštění. Něž celá sláva začne, tak si popovídáte s lidmi, které jste dlouho neviděli, omrknete terén a celkově se rozkoukáte.
-Pro mého dědu a ty co přijdou s potomkem je na farmě dostatek dobytka k obdivu.
+    Nebudeme si nic nalhávat, každý se občas opozdí. Zkuste tak tentokrát neučinit a dorazit včas. Než celá sláva začne, můžete si dát drink a popovídat si s přáteli.
 </p>
     </div>
           <div class="left1">
         <h2>15:30 - Obřad</h2>
-<p>Suchá i mokrá varianta se odehrává přímo na statku.</p>
+<p></p>
     </div>  
-    
+          <div class="left1">
+        <h2>16:00 - Společné foto</h2>
+<p></p>
+          <h2>16:10 - Počátek Rautu</h2>
+<p>Po pořízení společné fotografie se přesuneme do vedlejší stodoly, kde můžete jíst a pít, co hrdlo ráčí. Jídla bude dostatek v průběhu celého večera, není tedy třeba to na začátku přehánět- nezapomeňte, že bude prasátko a dort :)</p>  
+          <div class="left1">
+        <h2>17:00 - Dort</h2>
+<p>Je čas společně zakrojit svatební dort</p>
+         <div class="left1">
+        <h2>17:30 - Sólo novomanželů a sólo s rodiči</h2>
+<p>Po té, co si všichni naplníme bříška, můžeme se dát do tance. Taneční zábavu odstartuje sólo novomanželů a sólo s rodiči. Po těchto dvou tancích je parket jen váš! Jsme zvědaví, kdo z vás bude králem parketu tohoto večera.</p>   
+      <div class="left1">
+        <h2>19:00- Prasátko</h2>
+<p>Po sedmé hodině již bude ugrilované prasátko, máte-li chuť, zajděte ochutnat.</p>
+ <div class="left1">
+        <h2>20:00 - Volná zábava</h2>
+<p>Po osmé hodině nás čeká volná zábava, krom dalšího jídla, pití a tance nás čekají tradice jako házení kytice, dražba podvazku, atd.</p>
          
-    <div class="left12_first">
-        <h2>16:30 - Poobřadní část</h2>
-<p>Ihned po obřadu bude pro všechny pozvané hosty připraven raut formou švédských stolů. Během této části, proběhnou klasické tance 
-všech možných kombinací...Házení květiny...Stahování podvazku a jeho střelba, proslovy, děkovačky a další podobné akce. A samozřejmě dojde i na tradiční krájení dortu.</p>
-    </div>  
-    
-    <div class="left12_last">
-        <h2>20:00 - Veselice</h2>
-        <p>Klasická juchanda až do ranních hodin. DJ je objednán do 3:00 ale dle potřeby a našich příhozů je schopen hrát dále :-)
-        </p>
-    </div>
-    
+         
+         
+         
+         
+         
+         
+         
+   
     
     
           <div class="clear"></div>
