--- a/app/presenters/templates/Homepage/program.latte
+++ b/app/presenters/templates/Homepage/program.latte
@@ -6,66 +6,72 @@
 <!-- DropDownMenu -->
 <script type="text/javascript" src="js/menu.js"></script>
 <script type="text/javascript">
-var main_menu=new main_menu.dd("main_menu");
-main_menu.init("main_menu","menuhover");
+    var main_menu = new main_menu.dd("main_menu");
+    main_menu.init("main_menu", "menuhover");
 </script>
 
 {/block}
 
 {block content}
- <div class="page_header_photo general_header">
-      <div class="page_header_trans">
-               <div class="page_header_title">
-               <h1>PROGRAM</h1>
-<p>Předpokládaný průběh svatebního dne <br />
-               </div>
-       </div>
-   </div>
-
-    <div class="page_content">
-     <div class="full_width_centered">
-        <div class="left1">
-        <h2>14:30 - Ideální čas Vašeho příjezdu</h2>
-<p>
-    Nebudeme si nic nalhávat, každý se občas opozdí. Zkuste tak tentokrát neučinit a dorazit včas. Než celá sláva začne, můžete si dát drink a popovídat si s přáteli.
-</p>
+<div class="page_header_photo general_header">
+    <div class="page_header_trans">
+        <div class="page_header_title">
+            <h1>PROGRAM</h1>
+            <p>Předpokládaný průběh svatebního dne <br />
+        </div>
     </div>
-          <div class="left1">
-        <h2>15:30 - Obřad</h2>
-<p></p>
-    </div>  
-          <div class="left1">
-        <h2>16:00 - Společné foto</h2>
-<p></p>
-          <h2>16:10 - Počátek Rautu</h2>
-<p>Po pořízení společné fotografie se přesuneme do vedlejší stodoly, kde můžete jíst a pít, co hrdlo ráčí. Jídla bude dostatek v průběhu celého večera, není tedy třeba to na začátku přehánět- nezapomeňte, že bude prasátko a dort :)</p>  
-          <div class="left1">
-        <h2>17:00 - Dort</h2>
-<p>Je čas společně zakrojit svatební dort</p>
-         <div class="left1">
-        <h2>17:30 - Sólo novomanželů a sólo s rodiči</h2>
-<p>Po té, co si všichni naplníme bříška, můžeme se dát do tance. Taneční zábavu odstartuje sólo novomanželů a sólo s rodiči. Po těchto dvou tancích je parket jen váš! Jsme zvědaví, kdo z vás bude králem parketu tohoto večera.</p>   
-      <div class="left1">
-        <h2>19:00- Prasátko</h2>
-<p>Po sedmé hodině již bude ugrilované prasátko, máte-li chuť, zajděte ochutnat.</p>
- <div class="left1">
-        <h2>20:00 - Volná zábava</h2>
-<p>Po osmé hodině nás čeká volná zábava, krom dalšího jídla, pití a tance nás čekají tradice jako házení kytice, dražba podvazku, atd.</p>
-         
-         
-         
-         
-         
-         
-         
-         
-   
-    
-    
-          <div class="clear"></div>
-        </div>  <!--end of full width-->
-      </div> <!--end of about content-->   
-  
-  
+</div>
 
-   
+<div class="page_content">
+    <div class="full_width_centered">
+        <div class="left_full">
+            <h2>14:30 - Ideální čas Vašeho příjezdu</h2>
+            <p>
+                Nebudeme si nic nalhávat, každý se občas opozdí. Zkuste tak tentokrát neučinit a dorazit včas. Než celá sláva začne, můžete si dát drink a popovídat si s přáteli.
+            </p>
+        </div>
+        <div class="left_full">
+            <h2>15:30 - Obřad</h2>
+            <p></p>
+        </div>  
+        <div class="left_full">
+            <h2>16:00 - Společné foto</h2>
+            <p></p>
+        </div>  
+        <div class="left_full">
+            <h2>16:10 - Počátek Rautu</h2>
+            <p>Po pořízení společné fotografie se přesuneme do vedlejší stodoly, kde můžete jíst a pít, co hrdlo ráčí. Jídla bude dostatek v průběhu celého večera, není tedy třeba to na začátku přehánět- nezapomeňte, že bude prasátko a dort :)</p>  
+        </div> 
+        <div class="left_full">
+            <h2>17:00 - Dort</h2>
+            <p>Je čas společně zakrojit svatební dort</p>
+        </div>  
+        <div class="left_full">
+            <h2>17:30 - Sólo novomanželů a sólo s rodiči</h2>
+            <p>Po té, co si všichni naplníme bříška, můžeme se dát do tance. Taneční zábavu odstartuje sólo novomanželů a sólo s rodiči. Po těchto dvou tancích je parket jen váš! Jsme zvědaví, kdo z vás bude králem parketu tohoto večera.</p>   
+        </div>       
+        <div class="left_full">
+            <h2>19:00 - Prasátko</h2>
+            <p>Po sedmé hodině již bude ugrilované prasátko, máte-li chuť, zajděte ochutnat.</p>
+        </div>   
+        <div class="left_full">
+            <h2>20:00 - Volná zábava</h2>
+            <p>Po osmé hodině nás čeká volná zábava, krom dalšího jídla, pití a tance nás čekají tradice jako házení kytice, dražba podvazku, atd.</p>
+        </div>  
+    </div>           
+
+
+
+
+
+
+
+
+
+
+
+    <div class="clear"></div>
+</div>  <!--end of full width-->
+
+
+
